Categories, effects, styling

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Hangman</title>
+    <title>Gingerbread Hangman</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <link href="stylesheet.css" rel="stylesheet" type="text/css" />
 </head>
@@ -52,8 +52,18 @@
                 <span>Z</span>
             </div>
         </div>
+        <div>
+            <button id="resetButton">reset</button>
+        </div>
 
-
+        <div id="categories">
+            <img class="categoryIcon selectedIcon" id="foodIcon" src="food.png">
+            <img class="categoryIcon" id="geoIcon" src="globe.png">
+            <img class="categoryIcon" id="animalIcon" src="animals.png">
+            <img class="categoryIcon" id="mythIcon" src="satyr.png">
+            <img class="categoryIcon" id="minecIcon" src="minecraft.png">
+        </div>
+        <span id='credit'>gingerbread man by cameron giles, icons by flaticon.com</span>
 
     </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
